--- a/index.html
+++ b/index.html
@@ -164,11 +164,11 @@
 
     // get color depending on the candidate
 
-    var colors = {'caroline_ollivro': '#B6A3C9', 'pierre_priet': '#C40000', 'nathalie_appere': '#e20040', 'gerard_de_mellon': '#1B2638', 'matthieu_theurier': '#7AB41D', 'valerie_hamon': '#4D6BA2', 'alexandre_noury': '#EEA2B0'};
+    var colors = {'caroline_ollivro': '#B6A3C9', 'pierre_priet': '#C40000', 'nathalie_appere': '#e20040', 'gerard_de_mellon': '#1B2638', 'matthieu_theurier': '#7AB41D', 'valerie_hamon': '#4D6BA2', 'alexandre_noury': '#EEA2B0', 'bruno_chavanat': '#FB7102', 'remy_lescure': '#CCCCCC'};
     
-    var fullNames = { 'gerard_de_mellon': 'Gerard DE MELLON', 'nathalie_appere': 'Nathalie APPÉRÉ', 'matthieu_theurier': 'Matthieu THEURIER', 'valerie_hamon': 'Valérie HAMON', 'caroline_ollivro': 'Caroline OLLIVRO', 'pierre_priet': 'Pierre PRIET', 'alexandre_noury': 'Alexandre NOURY'}
+    var fullNames = { 'gerard_de_mellon': 'Gerard DE MELLON', 'nathalie_appere': 'Nathalie APPÉRÉ', 'matthieu_theurier': 'Matthieu THEURIER', 'valerie_hamon': 'Valérie HAMON', 'caroline_ollivro': 'Caroline OLLIVRO', 'pierre_priet': 'Pierre PRIET', 'alexandre_noury': 'Alexandre NOURY', 'remy_lescure': 'Rémy LESCURE', 'bruno_chavanat': 'Bruno CHAVANAT'};
 
-    var partis = {'matthieu_theurier': 'EELV/FG', 'nathalie_appere': 'PS', 'gerard_de_mellon': 'FN', 'pierre_priet': 'POI', 'caroline_ollivro': 'RBE', 'valerie_hamon': 'LO', 'alexandre_noury': 'S&P'};
+    var partis = {'matthieu_theurier': 'EELV/FG', 'nathalie_appere': 'PS', 'gerard_de_mellon': 'FN', 'pierre_priet': 'POI', 'caroline_ollivro': 'RBE', 'valerie_hamon': 'LO', 'alexandre_noury': 'S&P', 'bruno_chavanat': 'UDI', 'remy_lescure' : 'SE'};
 
     function getColor(candidat, score1, score2) {
       if (score1 == score2) {
