--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <script type="text/javascript" src="resultatsG1.json"></script>
   <script type="text/javascript">
 
-    var osmAttrib='Par <a href="http://www.makina-corpus.com" target="_blank">Makina Corpus</a> | <a href="https://github.com/makinacorpus/rennes2014/tree/gh-pages" target="_blank">Code</a>';
+    var osmAttrib='Par <a href="http://www.makina-corpus.com" target="_blank">Makina Corpus</a> | <a href="https://github.com/makinacorpus/rennes2014/tree/gh-pages" target="_blank">Code</a> | <a href="http://www.data.rennes-metropole.fr/les-donnees/catalogue/?tx_icsopendatastore_pi1[uid]=261" target="_blank">Données</a> | Découpage';
 
     var map = L.map('map', {maxZoom: 17, minZoom: 11}).setView([48.114767, -1.674929], 13);
     // Don't show the 'Powered by Leaflet' text 
