--- a/by-candidate.html
+++ b/by-candidate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Élections municipales 2014 à Rennes</title>
+  <title>Élections municipales 2014 à Rennes - premier tour - par candidat</title>
   <meta charset="utf-8" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -161,7 +161,7 @@
   <script type="text/javascript" src="resultatsG1.json"></script>
   <script type="text/javascript">
 
-    var colors = {'caroline_ollivro': '#B6A3C9', 'pierre_priet': '#C40000', 'nathalie_appere': '#e20040', 'gerard_de_mellon': '#1B2638', 'matthieu_theurier': '#7AB41D', 'valerie_hamon': '#4D6BA2', 'alexandre_noury': '#EEA2B0', 'bruno_chavanat': '#FB7102', 'remy_lescure': '#CCCCCC'};
+    var colors = {'caroline_ollivro': '#B6A3C9', 'pierre_priet': '#C40000', 'nathalie_appere': '#e20040', 'gerard_de_mellon': '#1B2638', 'matthieu_theurier': '#7AB41D', 'valerie_hamon': 'red', 'alexandre_noury': '#EEA2B0', 'bruno_chavanat': '#4D6BA2', 'remy_lescure': '#CCCCCC'};
     
     var fullNames = { 'gerard_de_mellon': 'Gerard DE MELLON', 'nathalie_appere': 'Nathalie APPÉRÉ', 'matthieu_theurier': 'Matthieu THEURIER', 'valerie_hamon': 'Valérie HAMON', 'caroline_ollivro': 'Caroline OLLIVRO', 'pierre_priet': 'Pierre PRIET', 'alexandre_noury': 'Alexandre NOURY', 'remy_lescure': 'Rémy LESCURE', 'bruno_chavanat': 'Bruno CHAVANAT'};
 
@@ -236,8 +236,6 @@
         legend.update();
       });
 
-      var colors = {"chaynes": "#9D0000", "domergue": "#4D6BA2", "salse": "#9D0000", "ressiguier": "#FF0000", "saurel": "#EEA2B0", "jamet": "#1B2638", "francis": "#8297BE", "balenghien": "#EEA2B0", "moure": "#e20040", "nuls": "black"};
-      
       function getColor(candidat, rate) {
         scale = chroma.scale(['white', chroma(colors[candidat]).saturate(50)]);
         var color = scale(rate).darken(rate*20).hex();
