--- a/second-tour.html
+++ b/second-tour.html
@@ -149,6 +149,7 @@
   <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
 <!--   <script type="text/javascript" src="http://d3js.org/d3.v2.js"></script> -->
   <script type="text/javascript" src="Control.TouchHover.js"></script>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/chroma-js/0.5.2/chroma.min.js"></script>
   <script type="text/javascript" src="bureaux.geojson"></script>
   <script type="text/javascript" src="bureaux_decoupage_2.json"></script>
   <script type="text/javascript" src="resultatsG2.json"></script>
@@ -175,11 +176,17 @@
 
     var partis = {'matthieu_theurier': 'EELV/FG', 'nathalie_appere': 'PS', 'gerard_de_mellon': 'FN', 'pierre_priet': 'POI', 'caroline_ollivro': 'RBE', 'valerie_hamon': 'LO', 'alexandre_noury': 'S&P', 'bruno_chavanat': 'UDI', 'remy_lescure' : 'SE'};
 
+    function getColorRate(candidat, rate) {
+      scale = chroma.scale(['white', chroma(colors[candidat]).saturate(50)]);
+      var color = scale(rate).darken(rate*20).hex();
+      return color;
+    }
+
     function getColor(candidat, score1, score2) {
       if (score1 == score2) {
         return 'white';
       } else{
-        return colors[candidat];
+        return getColorRate(candidat, ((score1 - score2) / 50));
       };
     }
 
