--- a/second-tour.html
+++ b/second-tour.html
@@ -162,7 +162,7 @@
     map.attributionControl.setPrefix(osmAttrib);
     map.setMaxBounds(new L.LatLngBounds(new L.LatLng(48.067756, -1.852042),new L.LatLng(48.160054, -1.404929)));
 
-    L.tileLayer("http://{s}.livembtiles.makina-corpus.net/makina/osmlight-france/{z}/{x}/{y}.png",{attribution:'&copy; Contributeurs <a href="http://osm.org/copyright" target="_blank">OpenStreetMap</a>'}).addTo(map)
+    L.tileLayer("http://tilestream.makina-corpus.net/v2/osmlight-france/{z}/{x}/{y}.png",{attribution:'&copy; Contributeurs <a href="http://osm.org/copyright" target="_blank">OpenStreetMap</a>'}).addTo(map)
 
     if (L.Browser.touch) {
       L.control.touchHover().addTo(map);
