--- a/by-candidate-second-tour.html
+++ b/by-candidate-second-tour.html
@@ -141,7 +141,7 @@
 </head>
 <body>
   <div id="header">
-    <a href="http://www.makina-corpus.com" target="_blank"><img id="logo" src="http://depot.makina-corpus.org/public/logo.gif"></a>
+    <a href="http://www.makina-corpus.com" target="_blank"><img id="logo" src="http://makina-corpus.com/++theme++plonetheme.makinacorpuscom/images/logo.png"></a>
     <h1 id="title">Élections municipales 2014 à Rennes - Second tour</h1>
     <h3 id="title2">Résultats par bureau de vote - la nuance dépend du pourcentage de votes.</h3>
     <select id="select-candidate"></select> 
